2009-07-07  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2008-12-13  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewSuppressUnmanagedCodeSecurityUsageRule.cs: Fix AnalyzeModule
	so that it activates the rule properly when multiple assemblies or
	modules are being checked.

2008-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotExposeFieldsInSecuredTypeRule.cs: Use HasFields
	* DoNotReduceTypeSecurityOnMethodsRule.cs: Use HasSecurityDeclarations

2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* AddMissingTypeInheritanceDemandRule.cs: Use HasSecurityDeclarations
	* DoNotExposeFieldsInSecuredTypeRule.cs: Use HasSecurityDeclarations
	* DoNotExposeMethodsProtectedByLinkDemandRule.cs: Use 
	HasSecurityDeclarations
	* DoNotReduceTypeSecurityOnMethodsRule.cs: Use HasSecurityDeclarations
	* ReviewNonVirtualMethodWithInheritanceDemandRule.cs: Use 
	HasSecurityDeclarations
	* ReviewSealedTypeWithInheritanceDemandRule.cs: Use 
	HasSecurityDeclarations
	* SecureGetObjectDataOverridesRule.cs: Use HasSecurityDeclarations

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Security.Cas.mdp:
	* Gendarme.Rules.Security.Cas.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Security.Cas.xml,
	doc/Gendarme.Rules.Security.Cas: With the new code in the Makefiles we
	don't need to keep the documentation files in the repository.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>
