@@ -1,3 +1,8 @@
+2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DoNotExposeMethodsProtectedByLinkDemandRule.cs: Apply PreferEmpty
+	InstanceOverNullRule (self-test)
+
 2009-07-07  Jesse Jones  <jesjones@mindspring.com>
 
 	* *Rule.cs: Edited most of the rule descriptions.
